--- a/premedia/edetailers/css/style.css
+++ b/premedia/edetailers/css/style.css
@@ -33,6 +33,31 @@
 @media (max-width: 900px) {
   .grid {
     display: block; } }
+@keyframes timeline-draw-right {
+  from {
+    -webkit-clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%); }
+  to {
+    -webkit-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%);
+    clip-path: polygon(100% 0, 0 0, 0 100%, 100% 100%); } }
+@keyframes timeline-fill-dot {
+  from {
+    background-color: rgba(58, 58, 157, 0); }
+  to {
+    background-color: #3A3A9D; } }
+@keyframes fade-in {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes slide-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(100vh); }
+  1% {
+    opacity: 1; }
+  100% {
+    transform: translateY(0); } }
 body[class^="fp-viewing-"] nav {
   position: fixed;
   width: 100%;
@@ -40,25 +65,26 @@ body[class^="fp-viewing-"] nav {
   body[class^="fp-viewing-"] nav .nav-container {
     margin: 0 auto;
     max-width: 1000px;
-    height: 3em;
+    height: 4em;
     display: flex;
     justify-content: space-between;
     align-items: center; }
     body[class^="fp-viewing-"] nav .nav-container .left .nav-logo img {
-      height: 2.5em;
-      transition: filter .3s linear;
+      height: 2.75em;
+      transition: filter 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition-delay: .6s; }
     body[class^="fp-viewing-"] nav .nav-container .right .nav-item {
       display: inline-block;
-      margin-left: 2em;
-      padding: .5em 0;
-      border-bottom: 3px solid rgba(0, 0, 0, 0);
-      transition: border-bottom .3s linear;
+      margin-left: 1.25em;
+      padding: 1em 0 .5em;
+      border-bottom: 3px solid rgba(58, 58, 157, 0);
+      transition: border-color 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition-delay: .6s; }
       body[class^="fp-viewing-"] nav .nav-container .right .nav-item a {
+        font-size: .9em;
         color: #000;
         text-decoration: none;
-        transition: color .3s linear;
+        transition: color 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         transition-delay: .6s; }
       body[class^="fp-viewing-"] nav .nav-container .right .nav-item.active {
         border-color: #3A3A9D; }
@@ -70,100 +96,6 @@ body.fp-viewing-home nav .nav-container .right .nav-item a, body.fp-viewing-serv
 body.fp-viewing-home nav .nav-container .right .nav-item.active, body.fp-viewing-services nav .nav-container .right .nav-item.active, body.fp-viewing-contact nav .nav-container .right .nav-item.active, body.dark-bg nav .nav-container .right .nav-item.active {
   border-color: #fff; }
 
-#map-section {
-  text-align: center; }
-  #map-section h2 {
-    color: #3A3A9D; }
-  #map-section .map-container {
-    width: 100%;
-    height: 75vh;
-    margin: 0 auto; }
-    #map-section .map-container #jvectormap {
-      width: 100%;
-      height: 100%;
-      color: #c5c5c5; }
-
-.jvectormap-tip {
-  background: white;
-  color: #292929;
-  border: solid 2px #3A3A9D;
-  border-radius: 0;
-  padding: .25em;
-  font-size: initial; }
-  .jvectormap-tip .company-name {
-    font-weight: bold;
-    font-size: 1.2em; }
-
-.jvectormap-container:hover .jvectormap-zoomin, .jvectormap-container:hover .jvectormap-zoomout {
-  display: block; }
-
-.jvectormap-zoomin, .jvectormap-zoomout {
-  display: none;
-  height: 1.5em;
-  width: 1.5em;
-  line-height: 1.5em;
-  font-size: 1.5em;
-  color: #fff;
-  border-radius: 5em;
-  background-color: rgba(0, 0, 0, 0.4);
-  bottom: 2%; }
-
-.jvectormap-zoomin {
-  left: 48%; }
-
-.jvectormap-zoomout {
-  left: 52%; }
-
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  background-color: #FFF;
-  font-family: 'Lato', sans-serif; }
-
-h1, h2, h3, h4, h5 {
-  fontfont-family: 'Varela', sans-serif; }
-
-p {
-  margin-block-start: 1.2em;
-  margin-block-end: 1.2em;
-  line-height: 1.5em; }
-
-.container {
-  max-width: 1000px;
-  padding: 1em 3em;
-  margin: 0 auto; }
-  .container.bigger {
-    max-width: 1200px; }
-  .container.no-max-width {
-    max-width: initial; }
-  .container.no-padding {
-    padding: 0; }
-
-.column {
-  padding: 1em;
-  box-sizing: border-box; }
-  .column img {
-    width: 100%; }
-  .column.no-padding {
-    padding: 0; }
-
-.hidden {
-  display: none; }
-
-.section-title {
-  text-align: center; }
-  .section-title h2 {
-    color: #3A3A9D; }
-
-hr {
-  background-color: #83D0F4;
-  border: none;
-  height: .25em;
-  margin: 1em auto; }
-  hr.left {
-    margin: 1em 0; }
-
 #home-section {
   background-color: #3A3A9D;
   -webkit-clip-path: ellipse(94% 53% at 50% 40%);
@@ -174,14 +106,8 @@ hr {
       margin-top: 0; }
     #home-section .info-panel .btn {
       margin-top: 3em;
-      background-color: #3A3A9D;
-      padding: 1em;
-      font-size: 1.2em;
-      color: #FFF;
-      border: none; }
-      #home-section .info-panel .btn.accent-blue {
-        color: #000;
-        background-color: #83D0F4; }
+      color: #000;
+      background-color: #83D0F4; }
   #home-section .slide-container {
     text-align: center;
     width: 70%; }
@@ -222,10 +148,9 @@ hr {
   #eDetailers-section .service-panel .column hr {
     height: .125em;
     width: 3em;
-    margin: 1em auto .25em; }
-
-.no-vert .fp-tableCell {
-  vertical-align: unset; }
+    margin: 1em auto .25em;
+    background-color: #83D0F4;
+    border: none; }
 
 #certifications-section {
   background-color: #EFEFEF;
@@ -301,7 +226,7 @@ hr {
 #services-section {
   background-image: url("../img/service_bg.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center top;
   background-size: 100%; }
   #services-section .column {
     margin-left: .5em;
@@ -310,68 +235,222 @@ hr {
       margin-top: 0;
       font-size: 1.5em; }
   #services-section .development {
-    background-color: #DDDEDE; }
+    background-color: #DDDEDE;
+    margin-bottom: 3em; }
     #services-section .development h3 {
       color: #3A3A9D; }
   #services-section .localisation {
     background-color: #3A3A9D;
-    color: #FFF; }
+    color: #FFF;
+    margin-bottom: 9em; }
     #services-section .localisation h3 {
       color: #83D0F4; }
+    #services-section .localisation p {
+      margin-bottom: 10em; }
   #services-section .translation {
-    background-color: #ECEFF0; }
+    background-color: #ECEFF0;
+    margin-bottom: 11em; }
     #services-section .translation h3 {
       color: #3A3A9D; }
   #services-section .transcreation {
-    background-color: #83D0F4; }
+    background-color: #83D0F4;
+    margin-bottom: 6em; }
     #services-section .transcreation h3 {
       color: #fff; }
+  #services-section.animated .column {
+    animation: slide-in-up .7s linear both; }
+    #services-section.animated .column:nth-of-type(1) {
+      animation-delay: 0.65s; }
+    #services-section.animated .column:nth-of-type(2) {
+      animation-delay: 0.8s; }
+    #services-section.animated .column:nth-of-type(3) {
+      animation-delay: 0.95s; }
+    #services-section.animated .column:nth-of-type(4) {
+      animation-delay: 1.1s; }
 
+#how-we-work-section .section-title {
+  margin-bottom: 2em; }
 #how-we-work-section hr {
   width: 12em; }
 #how-we-work-section .work-selector {
-  padding: 0;
-  color: #919191;
-  cursor: pointer; }
+  margin: 4em 0 2em; }
   #how-we-work-section .work-selector span {
-    padding: .5em .5em; }
-  #how-we-work-section .work-selector .column:nth-of-type(1) {
-    text-align: right; }
-  #how-we-work-section .work-selector .active {
-    color: #000; }
-    #how-we-work-section .work-selector .active span {
-      border-bottom: 3px solid black; }
+    padding: 0;
+    margin: 0 .5em; }
+    #how-we-work-section .work-selector span span {
+      color: #bbb;
+      cursor: pointer;
+      padding: .5em .5em;
+      border-bottom: 3px solid rgba(58, 58, 157, 0);
+      transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+      #how-we-work-section .work-selector span span.active {
+        color: #000;
+        border-color: #000; }
+    #how-we-work-section .work-selector span.column:nth-of-type(1) {
+      text-align: right; }
 #how-we-work-section .work-container {
   display: none; }
-  #how-we-work-section .work-container .column h3 {
-    color: #3A3A9D; }
+  #how-we-work-section .work-container .timeline {
+    width: 100%;
+    padding: 0 1em; }
+    #how-we-work-section .work-container .timeline .column {
+      height: 1.5em;
+      padding: 0;
+      position: relative; }
+    #how-we-work-section .work-container .timeline .dot {
+      height: .9em;
+      width: .9em;
+      border: 1px solid #3A3A9D;
+      border-radius: 5em;
+      background-color: rgba(58, 58, 157, 0);
+      box-sizing: border-box; }
+      #how-we-work-section .work-container .timeline .dot .line {
+        position: absolute;
+        height: 2px;
+        top: calc(.45em - 1px);
+        left: .9em;
+        background-color: #8e8e8e;
+        width: calc(100% - .8em); }
+  #how-we-work-section .work-container .column {
+    height: 15em; }
+    #how-we-work-section .work-container .column h3 {
+      color: #3A3A9D; }
   #how-we-work-section .work-container.active {
     display: flex; }
 #how-we-work-section .btn-container {
-  margin-top: 3em;
   text-align: center; }
-  #how-we-work-section .btn-container button {
-    font-size: 1.2em;
-    outline: none;
-    background-color: #3A3A9D;
-    color: #fff;
-    padding: 1em 3em; }
+  #how-we-work-section .btn-container .btn {
+    margin-top: 1em; }
+#how-we-work-section.animated .work-container .dot {
+  animation: timeline-fill-dot .5s linear forwards; }
+  #how-we-work-section.animated .work-container .dot.one {
+    animation-delay: 1s; }
+  #how-we-work-section.animated .work-container .dot.two {
+    animation-delay: 2.5s; }
+  #how-we-work-section.animated .work-container .dot.three {
+    animation-delay: 4s; }
+  #how-we-work-section.animated .work-container .dot.four {
+    animation-delay: 5.5s; }
+  #how-we-work-section.animated .work-container .dot.five {
+    animation-delay: 7s; }
+  #how-we-work-section.animated .work-container .dot .line {
+    animation: timeline-draw-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+    #how-we-work-section.animated .work-container .dot .line.one {
+      animation-delay: 1.5s; }
+    #how-we-work-section.animated .work-container .dot .line.two {
+      animation-delay: 3s; }
+    #how-we-work-section.animated .work-container .dot .line.three {
+      animation-delay: 4.5s; }
+    #how-we-work-section.animated .work-container .dot .line.four {
+      animation-delay: 6s; }
+    #how-we-work-section.animated .work-container .dot .line.five {
+      animation-delay: 7.5s; }
 
+#map-section {
+  text-align: center; }
+  #map-section h2 {
+    color: #3A3A9D; }
+  #map-section .map-container {
+    width: 100%;
+    height: 75vh;
+    margin: 0 auto; }
+    #map-section .map-container #jvectormap {
+      width: 100%;
+      height: 100%;
+      color: #c5c5c5; }
+  #map-section.animated .jvectormap-marker {
+    animation: fade-in 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+    #map-section.animated .jvectormap-marker:nth-of-type(1) {
+      animation-delay: 0.7s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(2) {
+      animation-delay: 0.9s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(3) {
+      animation-delay: 1.1s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(4) {
+      animation-delay: 1.3s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(5) {
+      animation-delay: 1.5s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(6) {
+      animation-delay: 1.7s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(7) {
+      animation-delay: 1.9s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(8) {
+      animation-delay: 2.1s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(9) {
+      animation-delay: 2.3s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(10) {
+      animation-delay: 2.5s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(11) {
+      animation-delay: 2.7s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(12) {
+      animation-delay: 2.9s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(13) {
+      animation-delay: 3.1s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(14) {
+      animation-delay: 3.3s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(15) {
+      animation-delay: 3.5s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(16) {
+      animation-delay: 3.7s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(17) {
+      animation-delay: 3.9s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(18) {
+      animation-delay: 4.1s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(19) {
+      animation-delay: 4.3s; }
+    #map-section.animated .jvectormap-marker:nth-of-type(20) {
+      animation-delay: 4.5s; }
+
+.jvectormap-tip {
+  background: white;
+  color: #292929;
+  border: solid 2px #3A3A9D;
+  border-radius: 0;
+  padding: .25em;
+  font-size: initial;
+  margin: 5em; }
+  .jvectormap-tip .company-name {
+    font-weight: bold;
+    font-size: 1.2em; }
+
+/* ZOOM CONTROLS
+.jvectormap-container:hover {
+	.jvectormap-zoomin, .jvectormap-zoomout {
+		// display: block;
+	}
+}
+.jvectormap-zoomin, .jvectormap-zoomout {
+	display: none;
+	height: 1.5em;
+	width: 1.5em;
+	line-height: 1.5em;
+	font-size: 1.5em;
+	color: #fff;
+	border-radius: 5em;
+	background-color: rgba(0,0,0,.4);
+	bottom: 2%;
+}
+.jvectormap-zoomin {
+	left: 48%;
+}
+.jvectormap-zoomout {
+	left: 52%;
+}
+*/
 #about-section .column {
   margin: 0 1.5em; }
   #about-section .column .info-panel {
     padding: 1em;
     background-color: #3A3A9D;
     color: #fff; }
-    #about-section .column .info-panel h2 {
-      color: #fff; }
-    #about-section .column .info-panel hr {
-      width: 6em; }
 #about-section .business-panel {
   padding-top: 12em; }
   #about-section .business-panel .about-icon {
-    width: 50%;
-    height: 5em; }
+    height: 4em; }
+    #about-section .business-panel .about-icon img {
+      width: 30%; }
+      #about-section .business-panel .about-icon img.bigger {
+        width: 40%; }
   #about-section .business-panel h3 {
     color: #3A3A9D; }
   #about-section .business-panel .column {
@@ -381,10 +460,62 @@ hr {
 #contact-section {
   background-color: #3A3A9D;
   color: #fff; }
-  #contact-section hr {
-    width: 10em; }
   #contact-section h3 {
+    font-size: .8em;
     color: #83D0F4;
     text-transform: uppercase; }
+
+html, body {
+  background-color: #FFF;
+  font-family: 'Lato', sans-serif; }
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Varela', sans-serif; }
+
+p {
+  margin-block-start: 1.2em;
+  margin-block-end: 1.2em;
+  line-height: 1.5em; }
+
+.container {
+  max-width: 1000px;
+  padding: 1em 3em;
+  margin: 0 auto; }
+  .container.bigger {
+    max-width: 1200px; }
+  .container.no-max-width {
+    max-width: initial; }
+  .container.no-padding {
+    padding: 0; }
+
+.no-vert .fp-tableCell {
+  vertical-align: unset; }
+
+.column {
+  padding: 1em;
+  box-sizing: border-box; }
+  .column img {
+    width: 100%; }
+  .column.no-padding {
+    padding: 0; }
+
+.section-title {
+  text-align: center; }
+  .section-title h2 {
+    color: #3A3A9D; }
+
+.light-blue-underline {
+  border-bottom: 4px solid #83D0F4;
+  padding-bottom: .5em;
+  box-sizing: border-box;
+  margin-bottom: 1.5em; }
+
+.btn {
+  margin-top: 3em;
+  background-color: #3A3A9D;
+  padding: 1em;
+  font-size: 1.2em;
+  color: #FFF;
+  border: none; }
 
 /*# sourceMappingURL=style.css.map */
