--- a/premedia/edetailers/scss/sections/map.scss
+++ b/premedia/edetailers/scss/sections/map.scss
@@ -13,6 +13,13 @@
 			color: #c5c5c5;
 		}
 	}
+
+	&.animated {
+		.jvectormap-marker {
+			animation: fade-in .2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+			@include staggeredDelays(20, .2, .5);
+		}
+	}
 }
 
 // jVectorMap default overrides
@@ -23,15 +30,17 @@
 	border-radius: 0;
 	padding: .25em;
 	font-size: initial;
+    margin: 5em;
 
 	.company-name {
 		font-weight: bold;
 		font-size: 1.2em;
 	}
 }
+/* ZOOM CONTROLS
 .jvectormap-container:hover {
 	.jvectormap-zoomin, .jvectormap-zoomout {
-		display: block;
+		// display: block;
 	}
 }
 .jvectormap-zoomin, .jvectormap-zoomout {
@@ -51,3 +60,4 @@
 .jvectormap-zoomout {
 	left: 52%;
 }
+*/ 
